Refactor some code and add attack/release envelope

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
         "persistent": false
     },
     "content_scripts": [{
-        "js": ["normalize.js"],
+        "js": ["normalize.js", "R128.js"],
         "matches": ["*://*.youtube.com/watch*"]
     }],
     "page_action": {
